<resources>
    <string name="app_name">Harry Potter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Students</string>
    <string name="staff">Staff</string>
    <string name="houses">Houses</string>
    <string name="quiz">Quiz</string>
    <string name="item_image">Item image</string>
    <string name="ravenclaw_house">Ravenclaw house</string>
    <string name="hufflepuff_house">Hufflepuff house</string>
    <string name="slytherin_house">Slytherin house</string>
    <string name="gryffindor_house">Gryffindor house</string>
    <string name="tap_one_to_view_more_info">Tap one to view more info:</string>
    <string name="deathly_hallows">Deathly hallows</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try again</string>
    <string name="leave">Leave</string>
    <string name="play_again">Play again</string>
    <string name="game_over">Game over</string>
    <string name="game_won">Game won</string>
    <string name="character_name">Character name:</string>
    <string name="house">House:</string>
    <string name="specie">Specie:</string>
    <string name="ancestry">Ancestry:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="eyes_colour">Eyes colour:</string>
    <string name="actor_name">Actor name:</string>
    <string name="patronus">Patronus:</string>
    <string name="colors">Colors:</string>
    <string name="values">Values:</string>
    <string name="animal">Animal:</string>
    <string name="element">Element:</string>
    <string name="ghost">Ghost:</string>
    <string name="founder">Founder:</string>
    <string name="common_room">Common room:</string>
</resources>