<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.character.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eyesColourValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/eyesColourText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/eyesColourText"
            app:layout_constraintTop_toTopOf="@+id/eyesColourText" />

        <TextView
            android:id="@+id/dateOfBirthValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/dateOfBirthText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/dateOfBirthText"
            app:layout_constraintTop_toTopOf="@+id/dateOfBirthText" />

        <TextView
            android:id="@+id/specieValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/specieText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/specieText"
            app:layout_constraintTop_toTopOf="@+id/specieText" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/potter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/characterNameText"
            style="@style/character_info"
            android:layout_marginTop="24dp"
            android:text="@string/character_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/houseText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/house"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/characterNameValue" />

        <TextView
            android:id="@+id/specieText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/specie"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/houseValue" />

        <TextView
            android:id="@+id/ancestryText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/ancestry"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/specieValue" />

        <TextView
            android:id="@+id/patronusText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/patronus"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ancestryValue" />

        <TextView
            android:id="@+id/dateOfBirthText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/date_of_birth"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/patronusValue" />

        <TextView
            android:id="@+id/eyesColourText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/eyes_colour"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirthValue" />

        <TextView
            android:id="@+id/actorNameText"
            style="@style/character_info"
            android:layout_marginTop="8dp"
            android:text="@string/actor_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/eyesColourValue" />

        <TextView
            android:id="@+id/characterNameValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/characterNameText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/characterNameText"
            app:layout_constraintTop_toTopOf="@+id/characterNameText" />

        <TextView
            android:id="@+id/houseValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/houseText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/houseText"
            app:layout_constraintTop_toTopOf="@+id/houseText" />

        <TextView
            android:id="@+id/ancestryValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/ancestryText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/ancestryText"
            app:layout_constraintTop_toTopOf="@+id/ancestryText" />

        <TextView
            android:id="@+id/patronusValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/patronusText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/patronusText"
            app:layout_constraintTop_toTopOf="@+id/patronusText" />

        <TextView
            android:id="@+id/actorNameValue"
            style="@style/character_values"
            app:layout_constraintBottom_toBottomOf="@+id/actorNameText"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/actorNameText"
            app:layout_constraintTop_toTopOf="@+id/actorNameText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>