<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.house.HouseFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/tap_one_to_view_more_info"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/house1Card"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="16dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ravenclaw_house"
                android:scaleType="fitXY"
                android:src="@drawable/ravenclaw" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/house2Card"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="16dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hufflepuff_house"
                android:scaleType="fitXY"
                android:src="@drawable/hufflepuf" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/house3Card"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="16dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slytherin_house"
                android:scaleType="fitXY"
                android:src="@drawable/slytherin" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/house4Card"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="30dp"
            app:cardElevation="16dp"
            app:cardPreventCornerOverlap="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gryffindor_house"
                android:scaleType="fitXY"
                android:src="@drawable/gryffindor" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>