<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoriesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".ui.character.CategoriesFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/deathly_hallows"
        android:src="@drawable/ic_deathly_hallows"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_deathly_hallows" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/studentsText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/students"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <TextView
            android:id="@+id/staffText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/staff"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="140dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <TextView
            android:id="@+id/housesText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/houses"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="259dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <TextView
            android:id="@+id/quizText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quiz"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="360dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>